--- a/software.html
+++ b/software.html
@@ -39,28 +39,36 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://lynk-2.workable.com/j/0823A8EF52'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
+<h5><a href='https://hostway.workable.com/j/052BD9FB63'>Hostway | HOSTING - Jobs: Senior Software Engineer (.NET) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://hostway.workable.com/j/43B53677AB'>Hostway | HOSTING - Jobs: Senior Software Engineer (.NET) - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://lynk-2.workable.com/j/0823A8EF52'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
+<p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://lynk-2.workable.com/j/2033D7EBB8'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Hong Kong Island, Hong Kong</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://lynk-2.workable.com/j/245A7476FA'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lynk-2.workable.com/j/245A7476FA'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
+<p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://lynk-2.workable.com/j/2728121D51'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://lynk-2.workable.com/j/2883E021D8'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Mumbai Mumbai</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lynk-2.workable.com/j/CF6CE574E5'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<h5><a href='https://lynk-2.workable.com/j/CF6CE574E5'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
+<p><span class="badge badge-light">Shenzhen, Guangdong, China</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/kennasecurity/d2bc48ad-b03e-4e69-8db8-1dd02c9d1c20'>Kenna Security - Software Engineer</a></h5> 
@@ -91,7 +99,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='https://nezasa.join.com/jobs/262609-backend-software-engineer'>Job @ Nezasa (Lisbon): Backend Software Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nezasa.join.com/jobs/262609-backend-software-engineer'>Job @ Nezasa (Lisbon): Backend Software Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -133,7 +141,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://skyslope.workable.com/j/0BDD0D7F53'>SkySlope - Jobs: Software Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skyslope.workable.com/j/0BDD0D7F53'>SkySlope - Jobs: Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -157,7 +165,7 @@
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/newrelic/job/osOCafwM'>New Relic Careers - Lead Software Engineer - Java</a></h5> 
+<h5><a href='https://jobs.jobvite.com/newrelic/job/osOCafwM'>New Relic Careers - Lead Software Engineer - Java</a></h5> 
 <p><span class="badge badge-light">Portland,</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -179,11 +187,11 @@
 <p><span class="badge badge-light">Santa Clara,</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/communitybrands/job/ob7M8fwW'>Community Brands Careers - Software Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/communitybrands/job/ob7M8fwW'>Community Brands Careers - Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -214,6 +222,11 @@
 <h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/sr-software-engineer-linux-unix-windows-c-java-21262-ak4q2IRSOr6AcMaKkRyNN8'>Sr Software Engineer- Linux, Unix, Windows,C++, Java-21262 #0234 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://nytimes.wd5.myworkdayjobs.com/en-US/Tech/job/New-York-NY/Software-Engineer---Algorithmic-Recommendations_REQ-005831'>Software Engineer - Algorithmic Recommendations</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 16, 2019 ... Our group develops and deploys machine learning infrastructure and algorithms 
+that power recommendations, newsletters, and other product experiences for?...</p>
 <hr/>
 <h5><a href='https://garmin-cluj.workable.com/j/D1370FEBE7'>Garmin Cluj - Jobs: C Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -252,7 +265,7 @@ develop software, but to build a system that will have an impact? As a full-stac
 solution in a fast-paced, agile environment. We're looking for a developer with the
 ?...</p>
 <hr/>
-<h5><a href='https://kiperformance.join.com/jobs/267342-mobile-software-engineer-ios-m-w-d'>Job @ KI Group (Cologne): Mobile Software Engineer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kiperformance.join.com/jobs/267342-mobile-software-engineer-ios-m-w-d'>Job @ KI Group (Cologne): Mobile Software Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -260,7 +273,7 @@ solution in a fast-paced, agile environment. We're looking for a developer with 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/apartmentlist/753db94c-0f02-4d74-ae7e-e0de63528974'>Apartment List - Full-Stack Software Engineer - Connections</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/apartmentlist/753db94c-0f02-4d74-ae7e-e0de63528974'>Apartment List - Full-Stack Software Engineer - Connections</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -362,7 +375,7 @@ Rosalind Picard to learn more about the history of Empatica and what drives our
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/newrelic/job/oXgDafwK'>New Relic Careers - Lead Software Engineer, Java</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/newrelic/job/oXgDafwK'>New Relic Careers - Lead Software Engineer, Java</a></h5> 
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -402,7 +415,7 @@ Rosalind Picard to learn more about the history of Empatica and what drives our
 <p><span class="badge badge-light">Columbus, Ohio</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1788733'>Job Application for Engineering: Senior Software Engineer - CI Development at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1788733'>Job Application for Engineering: Senior Software Engineer - CI Development at Job Board</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -445,21 +458,6 @@ Rosalind Picard to learn more about the history of Empatica and what drives our
 <h5><a href='https://boards.greenhouse.io/expapp/jobs/4369266002'>Job Application for Software Engineer at Experience LLC</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/perimeterx/b3959a1c-3679-4437-be0e-e411b343643e'>PerimeterX - Junior Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/rlsolutions/job/oasuafw0'>RLDatix Careers - Software Developer (Research Developer)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 15, 2019 ... We're looking for a Research Developer who will play a key role on the Research 
-team working closely with the data scientists and software developers. You'll?...</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/nicesystems/job/op6wafwV'>NICE Careers - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 14, 2019 ... an advantage; Experience with SCRUM/Agile methodologies ? an advantage; 
-Motivated developer with proactive approach; Excellent interpersonal skills, team
-?...</p>
 <hr/>
 
 
