--- a/deep-learning.html
+++ b/deep-learning.html
@@ -117,7 +117,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/forethought/0130b5ac-597a-4f57-99a9-a9a8d6a108ae'>Forethought - ML Engineer, Deep Learning &amp; NLP</a></h5> 
+<h5><a href='https://jobs.lever.co/forethought/0130b5ac-597a-4f57-99a9-a9a8d6a108ae'>Forethought - ML Engineer, Deep Learning &amp; NLP</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -131,7 +131,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">Amsterdam Amsterdam</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Engineer---WWFO_JR1923118'>Deep Learning Engineer - WWFO</a></h5> 
+<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Engineer---WWFO_JR1923118'>Deep Learning Engineer - WWFO</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... ... artificial intelligence and self-driving cars. Learn more about NVIDIA. Solutions 
 Architect - WWFO | US, CA, Santa Clara ? Solution Architect - WWFO | US, CA,?...</p>
@@ -157,11 +157,11 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oA4cafwK'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oA4cafwK'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oAFT7fwZ'>Samsung Semiconductor, Inc. Careers - Deep Learning Research Engineer (Deep Learning &amp; Algorithms)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oAFT7fwZ'>Samsung Semiconductor, Inc. Careers - Deep Learning Research Engineer (Deep Learning &amp; Algorithms)</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -169,7 +169,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oUPW7fww'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Sr Hardware Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oUPW7fww'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Sr Hardware Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -208,7 +208,7 @@ position is to create products or tools built on Artificial Intelligence...</p>
 vision, or - reinforcement learning. Applied to, for example: text categorization, 
 text?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/enlitic/2240ad0c-3b69-4a74-adc2-1273df00dc67'>Enlitic - Deep Learning Research Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/enlitic/2240ad0c-3b69-4a74-adc2-1273df00dc67'>Enlitic - Deep Learning Research Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
@@ -220,7 +220,7 @@ text?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://avvir.workable.com/j/95479207A5'>Avvir - Jobs: Computer Vision/Deep Learning Engineer - Apply online</a></h5> 
+<h5><a href='https://avvir.workable.com/j/95479207A5'>Avvir - Jobs: Computer Vision/Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-06-17</p>
 <hr/>
@@ -265,7 +265,7 @@ daytime?...</p>
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-06-07</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/ojwP9fwx'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/ojwP9fwx'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-05</p>
 <hr/>
@@ -345,7 +345,7 @@ source and research community is a fundamental part of your role. Competitive?..
 <p>4 days ago ... We're looking for firmware engineers to build the future of hearing instruments 
 and take on significant leadership and responsibility at a fast-growing startup.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_university/job/San-Jose/Deep-Learning-Research-Intern_75223'>Deep Learning Research Intern</a></h5> 
+<h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_university/job/San-Jose/Deep-Learning-Research-Intern_75223'>Deep Learning Research Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Job Description. Position summary: We are seeking computer vision and deep 
 learning students to conduct new research in one of several project areas. 
@@ -415,7 +415,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/deepgenomics/3160c2c8-0414-457a-891d-c41b54c80dfe'>Deep Genomics - Scientist ? Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/deepgenomics/3160c2c8-0414-457a-891d-c41b54c80dfe'>Deep Genomics - Scientist ? Machine Learning</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
@@ -447,7 +447,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://yoti.workable.com/j/526C903A57'>Yoti - Jobs: Research Scientist - Deep Learning - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://yoti.workable.com/j/526C903A57'>Yoti - Jobs: Research Scientist - Deep Learning - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
