--- a/product-manager.html
+++ b/product-manager.html
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/citybase/jobs/1795350'>Job Application for Product Manager  at CityBase</a></h5> 
+<h5><a href='https://boards.greenhouse.io/citybase/jobs/1795350'>Job Application for Product Manager  at CityBase</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -112,6 +112,12 @@
 <p><span class="badge badge-light">Warsaw, Poland</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
+<h5><a href='https://expedia.wd5.myworkdayjobs.com/search/job/Austin-Domain-11---HomeAway/Senior-Technical-Product-Manager_R-46038?source=BuiltInAustin'>Senior Technical Product Manager, Sales and Support Platforms</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 16, 2019 ... ... leverage native Salesforce.com platform capabilities. Experience applying 
+machine learning/AI to drive improvements in sales or customer support 
+processes.</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/blackline/job/o5qBafw0'>BlackLine Careers - Staff Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -128,7 +134,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kiperformance.join.com/jobs/255077-product-owner'>Job @ KI Group (Cologne): Product Owner | JOIN</a></h5> 
+<h5><a href='https://kiperformance.join.com/jobs/255077-product-owner'>Job @ KI Group (Cologne): Product Owner | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -136,7 +142,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Senior Product Manager at Cloudability.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/B9338DE99B'>SkySlope - Jobs: Senior Product Manager - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/B9338DE99B'>SkySlope - Jobs: Senior Product Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Senior Product Manager at SkySlope.</p>
 <hr/>
@@ -210,7 +216,7 @@
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/1FF152344C'>Natural Mojo - Jobs: Nutritional Scientist / Product Manager (m/f/x ...</a></h5> 
+<h5><a href='https://www.workable.com/j/1FF152344C'>Natural Mojo - Jobs: Nutritional Scientist / Product Manager (m/f/x ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Apply online for the job of Nutritional Scientist / Product Manager (m/f/x) Food 
 Supplements at Natural Mojo.</p>
@@ -223,7 +229,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tourradar/4818b918-3783-4f36-8714-b83badbb5fa5'>TourRadar - Senior Product Designer, Traveller Experiences (Freelance/Remote)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tourradar/4818b918-3783-4f36-8714-b83badbb5fa5'>TourRadar - Senior Product Designer, Traveller Experiences (Freelance/Remote)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -233,7 +239,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tide.workable.com/j/1D4E042968'>Tide Business Banking - Jobs: Product Owner - Credit - Apply online</a></h5> 
+<h5><a href='https://tide.workable.com/j/1D4E042968'>Tide Business Banking - Jobs: Product Owner - Credit - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -249,7 +255,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/vimeo/jobs/1792324'>Job Application for Product Manager, Payments at Vimeo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vimeo/jobs/1792324'>Job Application for Product Manager, Payments at Vimeo</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -279,7 +285,7 @@ other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/joinhandshake/jobs/1788133'>Job Application for Junior Product Designer at Handshake</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/joinhandshake/jobs/1788133'>Job Application for Junior Product Designer at Handshake</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -347,7 +353,7 @@ other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4366347002'>Job Application for Product Manager, Inventory Trust at Wayfair</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4366347002'>Job Application for Product Manager, Inventory Trust at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -380,7 +386,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/dvele/0fa1cdb0-6543-47f3-8837-032da931e429'>Dvele - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dvele/0fa1cdb0-6543-47f3-8837-032da931e429'>Dvele - Product Manager</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -388,7 +394,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://eygbl.referrals.selectminds.com/jobs/technology-and-digital-platforms-product-manager-90502'>Technology and Digital Platforms Product Manager - EY Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/technology-and-digital-platforms-product-manager-90502'>Technology and Digital Platforms Product Manager - EY Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Job Summary: The Technology and Digital Platforms Product Manager is 
 responsible for the overall management of one or more technology solutions for...</p>
@@ -417,7 +423,7 @@ responsible for the overall management of one or more technology solutions for..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gojek/40f69246-2821-4a01-a359-64b5b6bf3b02/apply'>GOJEK - Product Manager, Data Protection</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/40f69246-2821-4a01-a359-64b5b6bf3b02/apply'>GOJEK - Product Manager, Data Protection</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Product Manager, Data Protection. Jakarta. Product ? Product Management. Full 
 Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</p>
@@ -453,10 +459,6 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <h5><a href='https://boards.greenhouse.io/carousell/jobs/1789593'>Job Application for Lead Product Designer at Carousell</a></h5> 
 <p><span class="badge badge-light">Taiwan</span></p>
 <p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/rothys/jobs/4368158002'>Job Application for Senior Product Designer at Rothy's</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-07-23</p>
 <hr/>
 
 
